--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=MONGO_URI=mongodb+srv://admin:admin123@cluster0.xxxxx.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:admin123@cluster0.xxxxx.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET=supersecret123
 NODE_ENV=development
