--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,5 @@
 PORT=5000
-MONGO_URI=MONGO_URI=mongodb+srv://admin:admin123@cluster0.xvrdilk.mongodb.net/cmp?retryWrites=true&w=majority&appName=Cluster0
-
+MONGO_URI=mongodb+srv://satvik123:securepassword@cluster0.xvrdilk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=supersecret123
 NODE_ENV=development
